syntax = "proto2";

option go_package = "github.com/RoboCup-SSL/ssl-game-controller/internal/app/api";

import "ssl_gc_state.proto";
import "ssl_gc_change.proto";
import "ssl_gc_engine.proto";

import "google/protobuf/duration.proto";

message Output {
    optional State match_state = 1;
    optional GcState gc_state = 2;
    optional Protocol protocol = 3;
}

message Protocol {
    optional bool delta = 1;
    repeated ProtocolEntry entry = 2;
}

message ProtocolEntry {
    optional int32 id = 1;
    optional Change change = 2;
    optional google.protobuf.Duration match_time_elapsed = 3;
    optional google.protobuf.Duration stage_time_elapsed = 4;
}

message Input {
    optional Change change = 1;
    optional bool reset_match = 2;
}
